# Assignment4

Multi-Agent document Vector Search/: Dockerfile  docker-compose.yml  pyproject.toml
Multi-Agent document Vector Search/Airflow/: arxiv_myagent.py  constraints.txt  parse_document.py  parsed_text_and_tables.md  pinecone_script.py
Multi-Agent document Vector Search/Airflow/dags/: docling_parser.py
Multi-Agent document Vector Search/Airflow/shreyas_dags/: requirements.txt  s3_parse_with_pinecone_dag.py
Multi-Agent document Vector Search/Streamlit/: main.py
Multi-Agent-document-Vector-Search/Backend/: main.py
Multi-Agent-document-Vector-Search/Streamlit/: main.py  rag_agent.py
